--- a/i3/config
+++ b/i3/config
@@ -67,15 +67,15 @@ set $monitor_right DP-3
 	exec autotiling
 
 # Colors
-set $bg-color 	         #4b5263
-set $inactive-bg-color   #282c34
+set $bg-color 	         #282c34 
+set $inactive-bg-color   #4b5263
 set $text-color          #f3f4f5
 set $inactive-text-color #676E7D
 set $urgent-bg-color     #e06c75
 set $indicator-color 	 #61afef
 client.focused          $bg-color          $bg-color          $text-color          $indicator-color 
-client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color $indicator-color
-client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color $indicator-color
+client.unfocused        $bg-color          $bg-color          $text-color          $indicator-color 
+client.focused_inactive $bg-color          $bg-color          $text-color          $indicator-color 
 client.urgent           $urgent-bg-color   $urgent-bg-color   $text-color          $indicator-color
 
 # Gaps
@@ -94,8 +94,6 @@ client.urgent           $urgent-bg-color   $urgent-bg-color   $text-color       
 	bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i2status
 	bindsym XF86AudioPause exec playerctl play-pause
 
-# Screenshot utility
-bindsym --release Mod1+Shift+s exec scrot -s '/tmp/%F_%T_$wx$h.png' -e 'xclip -selection clipboard -target image/png -i $f'
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 bindsym $mod+Return exec kitty
@@ -193,8 +191,13 @@ assign [class="Badlion Client"] $ws9
 bindsym $mod+n exec emacsclient -c -a 'emacs'
 bindsym $mod+m exec librewolf
 bindsym $mod+comma exec thunar
+bindsym $mod+period exec codium
 bindsym $mod+Shift+1 restart
 bindsym $mod+Shift+Escape exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+# Screenshot utility
+bindsym --release Mod1+Shift+s exec scrot --freeze -s '/tmp/%F_%T_$wx$h.png' -e 'xclip -selection clipboard -target image/png -i $f'
+# Color Picker utility
+bindsym --release Mod1+Shift+c exec  colorpicker --one-shot --preview --short | xclip -selection c
 
 mode "resize" {
 	bindsym h resize shrink width 10 px or 10 ppt
