--- a/picom.conf
+++ b/picom.conf
@@ -12,7 +12,7 @@ shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 15;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
@@ -76,11 +76,11 @@ shadow-exclude = [
 fading = false
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-# fade-in-step = 0.028
-# fade-in-step = 0.03;
+# fade-in-step = 0.01
+#fade-in-step = 0.003;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-# fade-out-step = 0.03
+# fade-out-step = 0.01
 # fade-out-step = 0.03
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
@@ -103,7 +103,7 @@ fading = false
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 1
+inactive-opacity = 0.96
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -114,10 +114,10 @@ frame-opacity = 1.0
 inactive-opacity-override = false
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 1.0
+active-opacity = 1
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.0
+inactive-dim = 0.02
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
@@ -131,7 +131,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Note we don't make any guarantee about possible conflicts with other
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
-#    opacity-rule = [ "80:class_g = 'URxvt'" ];
+#    opacity-rule = [ "90:class_g = 'kitty'" ];
 #
 # opacity-rule = []
 
@@ -143,7 +143,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 6
+corner-radius = 15
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
