--- a/sioyek/prefs_user.config
+++ b/sioyek/prefs_user.config
@@ -1,4 +1,5 @@
 startup_commands		toggle_custom_color
+should_launch_new_window 1
 
 background_color	   	0.15686 0.17255 0.20392
 dark_mode_background_color 	0.15686 0.17255 0.20392
